# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  english.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md  vaativuusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti2_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: UI.py  config.py  database_connection.py  index.py  initialize_database.py
src/entities/: recipes.py  user.py
src/repositories/: history_repository.py  recipes_repository.py
src/services/: lookup_service.py  recipes_service.py
src/tests/: history_repository_test.py  lookup_service_test.py  lookup_test.py
src/ui/: history_view.py  lookup_view.py  main_view.py  ui.py
